--- a/portfolio/style/style2.css
+++ b/portfolio/style/style2.css
@@ -33,18 +33,6 @@ h1 {
     padding-top: 20px;
 }
 
-.back-container {
-    display: block;
-    border: #9B0909 1px solid;
-    background: #9B0909;
-    align-content: center;
-    justify-content: center;
-    width: 75px;
-    padding: 10px;
-    border-radius: 100% 25% 25% 100%;
-    margin-left: 15px;
-	box-shadow: 5px -5px 15px 5px #000000;
-}
 
 .back-container > a {
     text-decoration: none;
@@ -73,17 +61,118 @@ h1 {
     padding-top: 20px;
 }
 
+.thumbnail:hover {
+    opacity: 0.7;
+}
+
 .gallery-first-row img,
 .gallery-second-row img,
 .gallery-third-row img,
 .gallery-fourth-row img {
     width: 355px;
     height: 450px;
-    box-shadow: 0px 0px 18px 5px #000000
+    box-shadow: 0px 0px 18px 5px #000000;
+    
 }
+
+/* The Modal (background) */
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 99; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9); 
+}
+
+.thumbnail {
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+/* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 75%;
+}
+
+/* Caption of Modal Image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+@-webkit-keyframes zoom-in {
+    from {
+        -webkit-transform: scale(1);
+    }
+    to {
+        -webkit-transform: scale(2);
+    }
+}
+ 
+@keyframes zoom-in {
+    from {
+        transform: scale(0.4);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+
+@-webkit-keyframes zoom-out {
+    from {
+        -webkit-transform: scale(1);
+    }
+    to {
+        -webkit-transform: scale(0);
+    }
+}
+@keyframes zoom-out {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform:scale(0);
+    }
+}
+
+/* Add Animation */
+.modal-content, #caption {
+    -webkit-animation-name: zoom-in;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom-in;
+    animation-duration: 0.6s;
+}
+
+.out {
+    animation-name: zoom-out;
+    animation-duration: 0.6s;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px) {
+    .modal-content {
+        width: 100%;
+    }
+}
+
 
 footer {
     width: 100%;
     text-align: center;
     padding-top: 100px;
 }
+
